// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block should render correctly 1`] = `
<div
  className="ui-block"
  onClick={null}
  style={
    Object {
      "flex": 0,
    }
  }
/>
`;

exports[`Box should allow overriding of default styles 1`] = `
<div
  className="ui-box"
  style={
    Object {
      "alignContent": "flex-end",
      "color": "red",
      "flex": 0,
      "flexShrink": 1,
    }
  }
/>
`;

exports[`Box should allow passing spacing scales 1`] = `
<div
  className="ui-box"
  style={
    Object {
      "margin": "8px 16px 24px",
      "paddingTop": "8px",
    }
  }
/>
`;

exports[`Box should allow passing vector style values 1`] = `
<div
  className="ui-box"
  style={
    Object {
      "margin": "0px 5px 10% 15px",
      "padding": "15px ",
    }
  }
/>
`;

exports[`Box should render correctly 1`] = `
<div
  className="ui-box"
  style={Object {}}
/>
`;

exports[`Flex should render correctly 1`] = `
<div
  className="ui-flex"
  onClick={null}
  style={
    Object {
      "flex": 0,
    }
  }
/>
`;

exports[`Inline should render correctly 1`] = `
<span
  className="ui-inline"
  onClick={null}
  style={
    Object {
      "flex": 0,
    }
  }
/>
`;

exports[`InlineFlex should render correctly 1`] = `
<span
  className="ui-inline-flex"
  onClick={null}
  style={
    Object {
      "flex": 0,
    }
  }
/>
`;
